# paddle_my_pdf

./: LICENSE  README.md  main.py  paddle_my_pdf.py  pdf_searchable.py  pyproject.toml  requirements.txt  test_cjk.py  test_pdf_save.py  test_single_font.py  test_slow.py
antigravity/: paddle_my_pdf.py  requirements.txt  test_image_size.py
paddle_my_pdf/: cli.py  config.py  image_processor.py  ocr_manager.py  orchestrator.py  pdf_handler.py  text_layer.py
src/: ocr_manager.py  orchestrator.py
tests/: test_cjk.py  test_single_font.py  test_slow.py
